[gd_scene load_steps=8 format=3 uid="uid://bl7gxbsuiscw7"]

[ext_resource type="Texture2D" uid="uid://o3woviw6lta1" path="res://Scenes/Tilemap/Images/tileMap.png" id="1"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="2"]

[sub_resource type="RectangleShape2D" id="1"]

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="4"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="2"]
resource_name = "dissolve"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hg8fc"]
_data = {
"RESET": SubResource("3"),
"appear": SubResource("4"),
"dissolve": SubResource("2")
}

[node name="player" type="CharacterBody2D"]
scale = Vector2(1, 1.00243)
collision_layer = 3
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1")
hframes = 16
vframes = 16
frame = 45

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hg8fc")
}

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)

[node name="holdMaxSpeed" type="Timer" parent="."]
wait_time = 232.374
one_shot = true

[node name="restartLabel" type="Label" parent="."]
text = "Press R to Restart"

[node name="TouchScreenButton" type="TouchScreenButton" parent="restartLabel"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-7.62939e-06, -14.7851)
scale = Vector2(5, 0.710823)

[node name="coyoteJump" type="Timer" parent="."]

[node name="mobile" type="CanvasLayer" parent="."]
layer = -1
visible = false

[node name="c" type="Control" parent="mobile"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="jump" type="TouchScreenButton" parent="mobile/c"]
position = Vector2(328, 0)
scale = Vector2(0.356571, 0.517986)
action = "space"

[node name="left" type="TouchScreenButton" parent="mobile/c"]
position = Vector2(6.10352e-05, 0)
scale = Vector2(0.179, 0.518)
passby_press = true
action = "a"

[node name="left2" type="TouchScreenButton" parent="mobile/c"]
position = Vector2(152, 0)
scale = Vector2(0.179, 0.518)
passby_press = true
action = "d"

[connection signal="timeout" from="holdMaxSpeed" to="." method="_on_holdMaxSpeed_timeout"]
[connection signal="pressed" from="restartLabel/TouchScreenButton" to="." method="specialAction" binds= ["spikes"]]
